[CHANGES] UPDATE PRODUCT SERVICE IMPLEMENTATION